install_data(
    join_paths('scalable', application_id + '.svg'),
    install_dir: join_paths(get_option('datadir'), 'icons', 'hicolor', 'scalable', 'apps')
)
install_data(
    join_paths('hicolor', '512x512', 'apps', application_id + '.png'),
    install_dir: join_paths(get_option('datadir'), 'icons', 'hicolor', '512x512', 'apps')
)
install_data(
    join_paths('symbolic', application_id + '-symbolic.svg'),
    install_dir: join_paths(get_option('datadir'), 'icons', 'hicolor', 'symbolic', 'apps')
)
